--- a/css/estilosSass.css
+++ b/css/estilosSass.css
@@ -188,6 +188,47 @@ input {
   justify-items: center;
   margin: 25px 10% 150px 10%; }
 
+.tabla {
+  width: 100%;
+  text-align: center;
+  border-collapse: collapse; }
+  .tabla th {
+    padding-bottom: 10px;
+    color: #4B4B4B; }
+  .tabla td {
+    padding-top: 10px;
+    padding-bottom: 10px; }
+
+.numero-tabla {
+  width: 5%; }
+
+.direccion-tabla {
+  width: 55%; }
+
+.total-tabla {
+  width: 5%; }
+
+.entregado-tabla {
+  width: 20%; }
+
+.detalle-tabla {
+  width: 15%; }
+
+.borde-tr {
+  border-bottom: 1px solid #EBCFB8; }
+
+.boton-detalle {
+  padding: 5px 10px;
+  font-size: 14px;
+  border: 1px solid transparent;
+  background-color: transparent; }
+
+.boton-detalle:hover {
+  border-color: #74554D;
+  background-color: #74554D;
+  border-radius: 5px;
+  color: #FFFFFF; }
+
 header {
   width: 100%;
   background-color: #EBCFB8;
