--- a/css/estilosSass.css
+++ b/css/estilosSass.css
@@ -6,6 +6,9 @@
   box-sizing: border-box; }
 
 body {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
   font-family: "Poppins"; }
 
 a {
@@ -26,15 +29,16 @@ input {
 
 .boton-nav {
   margin-left: 25px;
-  border: 0px solid transparent;
-  border-bottom: 3px solid transparent;
+  padding: 5px 10px;
   background-color: transparent;
+  border: 1px solid transparent;
   font-size: 14px;
   font-family: "Poppins";
   font-weight: bold; }
   .boton-nav:hover {
-    border-bottom: 3px solid #74554D;
-    color: #74554D; }
+    background-color: #000000;
+    color: #FFFFFF;
+    border-radius: 5px; }
 
 .nav-menu {
   width: 30%;
@@ -112,33 +116,11 @@ input {
   display: flex;
   justify-content: center; }
 
-.carrito {
-  margin: 0% 10%;
-  padding: 25px;
-  border: 1px solid #EBCFB8;
-  border-radius: 10px; }
-  .carrito ul {
-    list-style: none; }
-    .carrito ul li {
-      margin-bottom: 10px;
-      display: flex;
-      justify-content: space-between; }
-      .carrito ul li:last-child {
-        margin-bottom: 0px; }
-
 .caja-boton-input {
-  margin: 15px 10% 20px 10%;
+  margin: 35px 10% 20px 10%;
   display: flex;
   justify-content: space-between;
   align-items: center; }
-
-.direccion {
-  width: 50%;
-  height: max-content;
-  padding-left: 5px;
-  border: 1px solid #CCCCCC;
-  border-radius: 5px;
-  font-size: 14px; }
 
 .boton-confirmar {
   padding: 10px 15px;
@@ -164,29 +146,25 @@ input {
     background-color: #AAAAAA;
     color: #000000; }
 
-.producto-carrito {
-  width: 50%; }
+.cantidad-tabla {
+  width: 20%;
+  border: 1px solid transparent;
+  border-bottom: 1px solid #CCCCCC; }
 
-.cantidad {
-  width: 10%;
-  text-align: center; }
-  .cantidad input {
-    width: 100%;
-    padding-left: 5px;
-    border-radius: 5px;
-    border: 1px solid #CCCCCC;
-    font-size: 14px; }
+.caja-direccion {
+  width: 55%;
+  padding: 0px 20px; }
 
-.importe {
-  width: 35%;
-  align-items: center;
-  justify-content: center;
-  text-align: center; }
+.direccion {
+  width: 100%;
+  border: solid transparent;
+  border-bottom: 1px solid #CCCCCC;
+  font-size: 16px; }
 
-.pedidos {
+.caja-tabla {
   display: flex;
   justify-items: center;
-  margin: 25px 10% 150px 10%; }
+  margin: 25px 10% 50px 10%; }
 
 .tabla {
   width: 100%;
@@ -196,38 +174,75 @@ input {
     padding-bottom: 10px;
     color: #4B4B4B; }
   .tabla td {
-    padding-top: 10px;
-    padding-bottom: 10px; }
+    padding: 15px 0px; }
 
-.numero-tabla {
-  width: 5%; }
+.tabla-width-60 {
+  width: 60%; }
 
-.direccion-tabla {
+.tabla-width-55 {
   width: 55%; }
 
-.total-tabla {
-  width: 5%; }
+.tabla-width-40 {
+  width: 40%; }
 
-.entregado-tabla {
+.tabla-width-30 {
+  width: 30%; }
+
+.tabla-width-20 {
   width: 20%; }
 
-.detalle-tabla {
+.tabla-width-15 {
   width: 15%; }
+
+.tabla-width-5 {
+  width: 5%; }
 
 .borde-tr {
   border-bottom: 1px solid #EBCFB8; }
 
-.boton-detalle {
+.boton-tabla {
+  min-width: 80%;
   padding: 5px 10px;
   font-size: 14px;
   border: 1px solid transparent;
   background-color: transparent; }
+  .boton-tabla:hover {
+    border-color: #000000;
+    background-color: #000000;
+    border-radius: 5px;
+    color: #FFFFFF; }
 
-.boton-detalle:hover {
-  border-color: #74554D;
-  background-color: #74554D;
-  border-radius: 5px;
-  color: #FFFFFF; }
+.tabla-detalle {
+  font-size: 14px;
+  border-collapse: collapse;
+  border-bottom-left-radius: 10px;
+  border-bottom-right-radius: 10px;
+  background-color: #EBCFB8;
+  animation-duration: 5s; }
+
+.cabecera-oculta {
+  color: #4B4B4B; }
+
+.caja-cargador {
+  display: flex;
+  justify-content: center; }
+
+.cargador {
+  width: 70px;
+  height: 70px;
+  border: 10px solid #FFFFFF;
+  border-top: 10px solid #EBCFB8;
+  border-radius: 50%;
+  animation-name: girar;
+  animation-duration: 1.5s;
+  animation-iteration-count: infinite;
+  animation-timing-function: linear; }
+
+@keyframes girar {
+  from {
+    transform: rotate(0deg); }
+  to {
+    transform: rotate(360deg); } }
 
 header {
   width: 100%;
@@ -249,8 +264,7 @@ header {
     margin-right: 10px; }
 
 footer {
-  /* position: absolute;
-    bottom: 0; */
+  margin-top: auto;
   width: 100%;
   flex-direction: column;
   padding: 2% 15%;
