--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -1,7 +1,6 @@
 footer{
     @extend .flexJustifyCentrado;
-    /* position: absolute;
-    bottom: 0; */
+    margin-top: auto;
     width: 100%;
     flex-direction: column;
     padding: 2% 15%;
@@ -19,7 +18,7 @@ footer{
         
         li{
             display: inline;
-            list-style: $no;
+            list-style: none;
         }
     }
 }
@@ -53,7 +52,7 @@ footer{
 .facebook {
 
     & img:last-child{
-        display: $no;
+        display: none;
     }
 
     &:hover img:last-child{
@@ -61,14 +60,14 @@ footer{
     }
 
     &:hover img:first-child{
-        display: $no;
+        display: none;
     }
 }
 
 .instagram {
 
     & img:last-child{
-        display: $no;
+        display: none;
     }
 
     &:hover img:last-child{
@@ -76,14 +75,14 @@ footer{
     }
 
     &:hover img:first-child{
-        display: $no;
+        display: none;
     }
 }
 
 .youtube {
 
     & img:last-child{
-        display: $no;
+        display: none;
     }
 
     &:hover img:last-child{
@@ -91,6 +90,6 @@ footer{
     }
 
     &:hover img:first-child{
-        display: $no;
+        display: none;
     }
 }
