--- a/scss/_general.scss
+++ b/scss/_general.scss
@@ -12,6 +12,7 @@ body{
     flex-direction: column;
     min-height: 100vh;
     font-family: $fuente;
+    overflow-y: scroll;
 }
 
 a{
@@ -58,6 +59,7 @@ input{
 
 .caja-subtitulo{
     margin: 10px 10%;
+    text-align: center;
 }
 
 .catalogo{
@@ -73,8 +75,9 @@ input{
     width: 100%;
     position: relative;
     padding-bottom: 30px;
-    border: 1px solid $claro;
+    border: 1px solid $borde-claro;
     border-radius: 10px;
+    box-shadow: 0px 15px 30px -10px;
 }
 
 .imagen-producto{
@@ -198,16 +201,55 @@ input{
 
 // css para pedidos.html
 
-.caja-tabla{
-    display: flex;
-    justify-items: center;
+.caja-pedidos{
     margin: 25px 10% 50px 10%;
+    padding: 1% 2%;
+    border: 1px solid $borde-claro;
+    border-radius: 10px;
+    box-shadow: 10px 10px 45px -25px;
+}
+
+.contenedor-pedido{
+    padding: .5% 0%;
+    justify-content: center;
+    margin: 1% 0%;
+    border-radius: 10px;
+    box-shadow: 0px 15px 30px -25px;
+    background-color: $claro;
+}
+
+.contenedor-titulo{
+    background-color: $claro;
+    border: 1px solid $borde-claro;
+    border-radius: 10px;
+    box-shadow: 0px 15px 30px -25px;
+    margin-bottom: 10px;
+    padding: 1% .5%;
+}
+
+.contenedor-info{
+    width: 100%;
+    border: 1px solid $borde-claro;
+    border-radius: 10px;
+    box-shadow: 0px 15px 30px -25px;
+    background-color: $blanco;
+}
+
+.caja-pedidos .contenedor-detalle{
+    height: 0;
+    padding: 0em;
+    overflow: hidden;
+    transition: all 0.5s ease;
+}
+
+.contenedor-detalle.caja-visible{
+    height: 20%;
+    margin: 1% 0%;
 }
 
 .tabla{
     width: 100%;
     text-align: center;
-    border-collapse: collapse;
 
     th{
         padding-bottom: 10px;
@@ -219,20 +261,12 @@ input{
     }
 }
 
-.tabla-width-60{
-    width: 60%;
-}
-
 .tabla-width-55{
     width: 55%;
 }
 
 .tabla-width-40{
     width: 40%;
-}
-
-.tabla-width-30{
-    width: 30%;
 }
 
 .tabla-width-20{
@@ -266,17 +300,14 @@ input{
     }
 }
 
-.tabla-detalle{
-    font-size: 14px;
-    border-collapse: collapse;
-    border-bottom-left-radius: 10px;
-    border-bottom-right-radius: 10px;
-    background-color: $claro;
-    animation-duration: 5s
-}
-
 .cabecera-oculta{
     color: $contraste;
+}
+
+.fila-oculta{
+    background-color: aqua;
+    height: 0;
+    overflow: hidden;
 }
 
 .caja-cargador{
